2006-04-14  Ethan A Merritt  <merritt@u.washington.edu>

	* src/term.c (change_term init_term): Save value of GNUTERM into a
	user-defined variable on entry.  Use only first word of GNUTERM when
	calling change_term. This allows GNUTERM to contain extended terminal
	specs, e.g.  setenv GNUTERM "png truecolor transparent".

2006-04-12  James R. Van Zandt  <jrv@debian.org>

	* term/cgm.trm (CGM_point): Update cgm_current.edge_visibility
	before cgm_current.edge_color (was displaying some point symbols
	with incorrect edge colors).

2006-04-10  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graph3d.c (draw_3d_graphbox):  Fix bug introduced when adding
	newpath/closepath around the border of 3D plots with 'set view map'.
	The top border was not getting drawn, and the individual border
	components were not being considered separately.
	Also, when in 'set view map' mode, honor 'set border {front|back}'.

	* src/graphics.c (plot_border) src/gadgets.h:  Similar bugfix in 2D.

	* src/misc.c (lp_parse): Don't fall into a recursion trap in the
	case that 'set style incr user' and  'set style line <foo> lt <baz>'.
	This should set the linetype of <foo> to <baz> even if <baz> itself
	has been assigned as another line style.

2006-04-08  Ethan A Merritt  <merritt@u.washington.edu>

	* src/standard.c (f_tanh): Fix a two-fold error in bounds checking for
	tanh().  Bug #1452627

2006-04-08  Bastian Maerkisch  <bmaerkisch@web.de>

	* src/win/pgnuplot.c: Patch for SF bug [1232950] "-persist option does
	not work in Version 4.0.0 (Windows)".  Omit sending `exit` from pgnuplot
	to wgnuplot when `-persist` is given on command line.

2006-04-08  Daniel Sebald  <daniel.sebald@ieee.org>

	* src/set.c (set_palette_file) docs/gnuplot.doc: Binary palette files
	are supported as well. Example:
	    set palette file "palette.bin" binary record=64 using 1:2:3

2006-04-08  Bastian Maerkisch  <bmaerkisch@web.de>

	* config/config.os2: Define more features.

	* config/makefile.os2: