@@ -1,5 +1,5 @@
 /* -*- objc -*-
- * $Id: aquaterm.trm,v 1.21 2006/03/17 13:35:42 lhecking Exp $
+ * $Id: aquaterm.trm,v 1.22 2006/04/16 21:22:09 sfeam Exp $
  *
  */
 
@@ -861,9 +861,9 @@ START_HELP(aqua)
 " <x> <y> is the size of the plot (default is 846x594 pt = 11.75x8.25 in).",
 "",
 " Use <fontface> to specify the font to use (default is \"Times-Roman\"),",
-" <fontzise> sets the font size (default is 14.0 pt).",
+" <fontsize> sets the font size (default is 14.0 pt).",
 "",
-" The aqua terminal support enhanced text mode (see `enhanced`), except for",
+" The aqua terminal supports enhanced text mode (see `enhanced`), except for",
 " overprint. Font support is limited to the fonts available on the system.",
 " Character encoding can be selected by `set encoding` and currently supports",
 " iso_latin_1, iso_latin_2, and cp1250 with iso_latin_1 being the default."  
